# unb-pvc-project-cars

./: .gitignore  LICENSE  README.md
absolute-difference/: absDiff.cpp  absDiff.py
absolute-difference/resultados_absDiff/: n13.avi.txt  n15.avi.txt  n6.avi.txt
background-subtractor/: BlobTracking.h  CMakeLists.txt  README.txt  bs.cpp
background_subtractor/absolute-difference/: CMakeLists.txt  absDiff.cpp  absDiff.py
background_subtractor/background-subtractor/: BlobTracking.cpp  BlobTracking.h  bs.cpp
groundtruth/: CMakeLists.txt  README.md  README.txt  rect_groundtruth.cpp  rect_groundtruth_Arquivo.cpp
groundtruth/groundTruthSaidas/: 10_avi-Pronto.txt  11_avi-Pronto.txt  3_avi-Pronto.txt  n10.avi.txt  n8.avi.txt  n9.avi.txt
groundtruth/groundtruth_alpha/: makefile
groundtruth/groundtruth_alpha/groundTruthSaidas/: n11.avi.txt  n16.avi.txt  n17.avi.txt  n3_avi.txt  n5_avi.txt
groundtruth/groundtruth_alpha/groundtruth_saidas_antigos/: 12_avi-Pronto.txt  1_avi-Pronto.txt  2_avi-Pronto.txt  4_avi-Pronto.txt  5_avi-Pronto.txt
groundtruth/groundtruth_alpha/resultados_absDiff/: n1.avi.txt  n11.avi.txt  n14.avi.txt  n5.avi.txt  n7.avi.txt  n9.avi.txt
groundtruth/groundtruth_final_project/: CMakeLists.txt  draw_binaries.cpp  generate_groundtruth.cpp  makefile  match.cpp
groundtruth/groundtruth_gama/: CMakeLists.txt  README.md  draw_rectangles.cpp  generate_negative_samples.cpp  match.py
groundtruth/groundtruthexecution/: build_all.sh  draw_rectangles.cpp  n1_avi.txt  n2_avi.txt  rect_groundtruth.cpp
groundtruth/resultados_absDiff/: n1.avi.txt  n10.avi.txt  n11.avi.txt  n12.avi.txt  n13.avi.txt  n14.avi.txt  n15.avi.txt  n16.avi.txt  n17.avi.txt  n2.avi.txt  n3.avi.txt  n4.avi.txt  n5.avi.txt  n6.avi.txt  n7.avi.txt  n8.avi.txt  n9.avi.txt
groundtruth/resultados_haarcascade/: n14.avi.txt  n17.avi.txt  n6.avi.txt  n7.avi.txt  n9.avi.txt
groundtruth/resultados_haarcascade/param1/: n1.avi.txt  n10.avi.txt  n11.avi.txt  n12.avi.txt  n13.avi.txt  n15.avi.txt  n16.avi.txt  n17.avi.txt  n2.avi.txt  n3.avi.txt  n4.avi.txt  n5.avi.txt  n6.avi.txt  n8.avi.txt  parameters.txt
groundtruth/resultados_haarcascade/param2/: n10.avi.txt  n11.avi.txt  n13.avi.txt  n15.avi.txt  n16.avi.txt  n17.avi.txt  n2.avi.txt  n3.avi.txt  n5.avi.txt  n6.avi.txt  n7.avi.txt  n8.avi.txt  n9.avi.txt  parameters.txt
groundtruth/resultados_haarcascade/param3/: n1.avi.txt  n10.avi.txt  n11.avi.txt  n12.avi.txt  n13.avi.txt  n14.avi.txt  n17.avi.txt  n4.avi.txt  n5.avi.txt  parameters.txt
groundtruth/resultados_haarcascade/param4/: n1.avi.txt  n12.avi.txt  n13.avi.txt  n15.avi.txt  n16.avi.txt  n2.avi.txt  n3.avi.txt  n4.avi.txt  n5.avi.txt  n6.avi.txt  n7.avi.txt  n9.avi.txt
groundtruth/resultados_haarcascade/param5/: n1.avi.txt  n10.avi.txt  n13.avi.txt  n4.avi.txt  n8.avi.txt  parameters.txt
groundtruth/resultados_haarcascade/param6/: n1.avi.txt  n10.avi.txt  n12.avi.txt  n14.avi.txt  n16.avi.txt  n6.avi.txt  n8.avi.txt  n9.avi.txt  parameters.txt
groundtruth/resultados_optFlow/take1/: n1.avi.txt  n10.avi.txt  n11.avi.txt  n12.avi.txt  n13.avi.txt  n15.avi.txt  n16.avi.txt  n17.avi.txt  n2.avi.txt  n3.avi.txt  n4.avi.txt  n5.avi.txt  n7.avi.txt  n8.avi.txt  n9.avi.txt
groundtruth/resultados_optFlow/take2/: n1.avi.txt  n10.avi.txt  n11.avi.txt  n12.avi.txt  n13.avi.txt  n14.avi.txt  n15.avi.txt  n16.avi.txt  n17.avi.txt  n2.avi.txt  n3.avi.txt  n4.avi.txt  n5.avi.txt  n6.avi.txt  n7.avi.txt  n8.avi.txt  n9.avi.txt  params.txt
groundtruth/resultados_optFlow/take3/: n1.avi.txt  n10.avi.txt  n11.avi.txt  n12.avi.txt  n13.avi.txt  n14.avi.txt  n15.avi.txt  n16.avi.txt  n17.avi.txt  n2.avi.txt  n3.avi.txt  n4.avi.txt  n5.avi.txt  n6.avi.txt  n7.avi.txt  n8.avi.txt  n9.avi.txt
groundtruth/resultados_optFlow/take4/: n1.avi.txt  n10.avi.txt  n11.avi.txt  n12.avi.txt  n13.avi.txt  n14.avi.txt  n15.avi.txt  n16.avi.txt  n17.avi.txt  n2.avi.txt  n3.avi.txt  n4.avi.txt  n5.avi.txt  n6.avi.txt  n7.avi.txt  n8.avi.txt  n9.avi.txt
groundtruth/resultados_optFlow/take5/: n1.avi.txt  n11.avi.txt  n14.avi.txt  n16.avi.txt  n2.avi.txt
groundtruth/resultados_optFlow/take_1/: n16.avi.txt  n8.avi.txt  n9.avi.txt
groundtruth/resultados_optFlow/take_2/: n12.avi.txt  n16.avi.txt  n5.avi.txt  n9.avi.txt
groundtruth/resultados_optFlow/take_3/: n12.avi.txt  n17.avi.txt  n4.avi.txt
groundtruth/resultados_optFlow/take_4/: n13.avi.txt  n2.avi.txt  n3.avi.txt
groundtruth/resultados_optFlow/take_5/: n13.avi.txt  n16.avi.txt  n17.avi.txt  n2.avi.txt  n3.avi.txt  n5.avi.txt
groundtruth_v2/: README.txt  draw_rectangles.cpp
haarcascade_training/tools/resize_images/: pos_2.info  resize_images  resize_images.cpp
haarcascade_training/tools/split_videos/: negative_samples_folder_5.txt  negative_samples_folder_6.txt  split_video  split_video.cpp
match/: match.cpp
opticalflow/: Makefile  OpticalFlowHS.cpp  README.txt  _DS_Store
opticalflow/include/: _DS_Store  flowCore.hpp  segmentation.hpp
opticalflow/pedro/: Makefile  OpticalFlowHS.cpp  OpticalFlowHS_run.cpp  README.txt
opticalflow/pedro/include/: HS.hpp  flowCore.hpp  opticalFlow.hpp  segmentation.hpp
opticalflow/pedro/src/: HS.cpp  flowCore.cpp  segmentation.cpp
opticalflow/resultados_optFlow/: _DS_Store
opticalflow/src/: _DS_Store  segmentation.cpp
sandbox/: README.txt
sandbox/Pedro/: HelloWorld.txt
vehicle_detection_haarcascade/: CMakeLists.txt  HaarCarDetector.cpp  HaarCarDetector.h  README.txt  run_videos.sh  vehicle_detection.cpp
vehicle_detection_haarcascade/build_sublime/param1/: n14.avi.txt  parameters.txt
vehicle_detection_haarcascade/build_sublime/param3/: n2.avi.txt  n7.avi.txt
vehicle_detection_haarcascade/build_sublime/param4/: n17.avi.txt
vehicle_detection_haarcascade/build_sublime/param5/: n11.avi.txt
vehicle_detection_haarcascade/build_sublime/param6/: n15.avi.txt  n3.avi.txt
videos/: README.md
videos/videos_aleatorios/: README.txt
videos/videos_haarcascade_method_training/: README.md
videos/videos_originais/: README.txt
videos/videos_trabalho_final/: README.txt
(+324 files in other folders)
